cmake_minimum_required(VERSION 2.8)
project( yoloV5v6 )

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")

aux_source_directory(./src/ SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})

#include_directories( ${CMAKE_CURRENT_LIST_DIR}/../ncnn/build/src )
#include_directories( ${CMAKE_CURRENT_LIST_DIR}/../ncnn/src )
#include_directories( ncnn/build/src )
include_directories( include/common )
include_directories( include/tengine)
include_directories( include/Lane)
include_directories( include/)
include_directories( 3rdparty/tim-vx/include/VX )
include_directories( 3rdparty/tim-vx/include/CL )
include_directories( src/ )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )

target_link_libraries( yoloV5v6 ${OpenCV_LIBS} )
target_link_libraries( yoloV5v6 /home/hank/acc/lib/tengine-x86_64/libtengine-lite.so)
target_link_libraries( yoloV5v6 /home/hank/acc/3rdparty/tim-vx/lib/x86_64/libArchModelSw.so)
target_link_libraries( yoloV5v6 /home/hank/acc/3rdparty/tim-vx/lib/x86_64/libCLC.so)
target_link_libraries( yoloV5v6 /home/hank/acc/3rdparty/tim-vx/lib/x86_64/libEmulator.so)
target_link_libraries( yoloV5v6 /home/hank/acc/3rdparty/tim-vx/lib/x86_64/libGAL.so)
target_link_libraries( yoloV5v6 /home/hank/acc/3rdparty/tim-vx/lib/x86_64/libNNArchPerf.so)
target_link_libraries( yoloV5v6 /home/hank/acc/3rdparty/tim-vx/lib/x86_64/libOpenVXC.so)
target_link_libraries( yoloV5v6 /home/hank/acc/3rdparty/tim-vx/lib/x86_64/libOpenVX.so)
target_link_libraries( yoloV5v6 /home/hank/acc/3rdparty/tim-vx/lib/x86_64/libOpenVX.so.1)
target_link_libraries( yoloV5v6 /home/hank/acc/3rdparty/tim-vx/lib/x86_64/libOpenVX.so.1.3.0)
target_link_libraries( yoloV5v6 /home/hank/acc/3rdparty/tim-vx/lib/x86_64/libOpenVXU.so)
target_link_libraries( yoloV5v6 /home/hank/acc/3rdparty/tim-vx/lib/x86_64/libvdtproxy.so)
target_link_libraries( yoloV5v6 /home/hank/acc/3rdparty/tim-vx/lib/x86_64/libVSC.so)
